--- a/saturn-vanity/package.json
+++ b/saturn-vanity/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "vite": "^5.4.1",
     "vite-plugin-static-copy": "^1.0.6"
+  },
+  "dependencies": {
+    "@splinetool/runtime": "^1.9.23"
   }
 }
